# poe_cap

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml  requirements.in
backend/: decode_network.py  hotpoint_detector.py  memory_dump.py  memory_scanner.py  network_mitm.py  sniffer.py  tzsp_listener.py
backend/tests/: test_utils.py
backend/utils/: __init__.py  scanmem.py
binaries/: libscanmem.so.1.0.0
other/sample_client/: .clangd  Makefile  client.cpp  main.cpp  main.vcxproj  sample.cpp  sample.h
other/sample_server/: test_encrypt.py  test_server.py
other/socket_hook/: Makefile  dlsym_hook.c  socket_hook.c
scripts/: gdb_break.py  gdb_break.sh  generate_signatures.py
