[project]
name = 'poe_cap'
version = '0.1.0'
dependencies = [
  'scapy==2.5.0',
  'pycryptodome==3.20.0',
  'psutil==5.9.8',
  'fabric==3.2.2',
  'fan_tools==4.3.0',
  'pytest~=8.2',
]

[tool.ruff]
line-length = 100
select = [
  "E",     # pycodestyle
  "F",     # pyflakes
  "I",     # isort
  "G",     # flake8-logging-format
  "ASYNC", # flake8-async
  "PIE",   # flake8-pie
  "T20",   # flake8-print
  "PT",    # flake8-pytest-style
  "Q",     # flake8-quotes
]
ignore = [
  "G004",
  "Q001",
  "Q003",
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ['snapshot_manager']
lines-after-imports = 2

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "single"
